# tag-repo

./: .eslintrc.cjs  .gitignore  .prettierrc.yaml  Cargo.toml  README.md  index.html  install-linux-packages.sh  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  tailwind.config.cjs  tailwind.config.d.ts  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
.run/: Build Tauri App.run.xml  Run Tauri App w_o Server.run.xml  Run Tauri App.run.xml  Run clippy.run.xml  Start server.run.xml
src/: App.vue  main.ts  styles.css  unplugin-icons.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  config.rs  database.rs  db.rs  defaultState.json  diff.rs  lib.rs  main.rs  main_tauri.rs  manager.rs  parser.pest  parser.rs  path.rs  pool.rs  query.rs  repo.rs  scan.rs  state.rs  temp.rs  testutils.rs  tree.rs  watch.rs
src-tauri/src/helpers/: mod.rs  sql.rs
src-tauri/src/lib/: database.rs  mod.rs  scan.rs
src-tauri/src/migrations/: 01d_inital.sql  01d_initial.sql  01u_inital.sql  01u_initial.sql
src-tauri/src/query/: convert.rs  mod.rs  parser.rs  query.rs
src-tauri/src/tests/: drum_collection.testrepo.json  mod.rs  query_repo.rs  utils.rs
src-tauri/src/watch/: mod.rs  windows.rs
src/components/: BottomPanel.vue  ContextMenu.vue  FeedbackModal.vue  FolderTree.vue  FolderTreeItem.vue  Greet.vue  Item.vue  ItemIcon.vue  ItemList.vue  ItemListCell.vue  ItemListHeader.vue  ItemProperties.vue  ItemRow.vue  LoadingDots.vue  PanelsContainer.vue  PropertiesPanel.vue  PropertiesPanelEmpty.vue  PropertiesPanelSingle.vue  QueryBar.vue  SearchBar.vue  StatusBar.vue  StatusBarInfo.vue  Tag.vue  TitleBar.vue  TitleBarSpacer.vue  ToolbarMenu.vue
src/components/itemlist/: ItemIcon.vue  ItemListHeader.vue  ItemRow.vue
src/components/menu/: Menu.vue  MenuArbitraryItem.vue  MenuContainer.vue  MenuItem.vue  MenuSeparator.vue  MenuText.vue
src/components/panels/: BottomPanel.vue  LeftPanel.vue  RightPanel.vue
src/components/toolbars/: AudioSlider.vue  StatusBar.vue  StatusBarInfo.vue  TitleBar.vue  ToolbarButton.vue
src/lib/: api.ts  constants.ts  date.ts  ffi.ts  icons.ts  items.ts  path.test.ts  path.ts  tailwindcss.ts  utils.ts
src/lib/api/: actions.ts  audio-preview.ts  config.ts  index.ts  items.ts  query.ts  repo.ts  selection.ts  state.ts  view-columns.ts
src/plugins/: click-away.ts
src/types/: vite-env.d.ts  vue-file-toolbar-menu.d.ts  vue-virtual-scroller.d.ts
