[package]
name = "tauri-app"
version = "0.0.3"
description = "A Tauri App"
authors = ["jamesWalker55"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = { git = "https://github.com/tauri-apps/window-shadows", rev = "38e89e93340e3ecd44e6f6cdfdd810df9f7b3073" }
time = { version = "0.3.17", features = ["std"] }
rusqlite = { version = "0.29.0", features = ["bundled", "functions"] }
indoc = "2"
rusqlite_migration = "1.0.1"
lazy_static = "1.4.0"
tempfile = "3.4.0"
notify = { version = "5.1.0", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.2.0"
futures = "0.3.26"
futures-timer = "3.0.2"
nom = "7.1.3"
itertools = "0.10.5"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.67"
path-slash = "0.2.1"
relative-path = "1.8.0"
tracing = "0.1"
tracing-subscriber = "0.2.0"
thiserror = "1.0.40"
open = "4.0.1"
normpath = "1.1"
rodio = { version = "0.17.1", features = ["symphonia-aac", "symphonia-isomp4"] }
nom-unicode = "0.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "lib"
path = "src/lib.rs"
test = true
