[package]
name = "tauri-app"
version = "0.0.3"
description = "A Tauri App"
authors = ["jamesWalker55"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = { git = "https://github.com/tauri-apps/window-shadows", rev = "1f26ca4db1006a390a60e2919b833cdab9385842" }
drag = { git = "https://github.com/crabnebula-dev/drag-rs", rev = "4f588b534ad94847017302144e601c0b905b4bc5" }
tauri-plugin-drag = { git = "https://github.com/crabnebula-dev/drag-rs", rev = "4f588b534ad94847017302144e601c0b905b4bc5" }
rusqlite = { version = "0.30.0", features = ["bundled", "functions"] }
indoc = "2"
rusqlite_migration = "1.1.0"
lazy_static = "1.4.0"
tempfile = "3.8"
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
futures = "0.3"
nom = "7.1.3"
itertools = "0.12.0"
tokio = { version = "1.27.0", features = ["full"] }
relative-path = "1.8.0"
tracing = "0.1"
tracing-subscriber = "0.3.18"
thiserror = "1.0.40"
open = "5.0.0"
normpath = "1.1"
rodio = { version = "0.17.1", features = ["symphonia-aac", "symphonia-isomp4"] }
nom-unicode = "0.3.0"
structstruck = "0.4.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"

[dev-dependencies]
path-slash = "0.2.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "lib"
path = "src/lib.rs"
test = true
